--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -766,3 +766,5 @@ map <C-f> fzf_select
 map <alt>/ console fd_search -d5%space
 map <alt>. fd_next
 map <alt>, fd_prev
+map cc console z%space
+map cz zi
