--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ranger/.config/ranger/plugins/zoxide"]
 	path = ranger/.config/ranger/plugins/zoxide
 	url = git@github.com:jchook/ranger-zoxide.git
+[submodule "ranger/.config/ranger/plugins/ranger_devicons"]
+	path = ranger/.config/ranger/plugins/ranger_devicons
+	url = https://github.com/alexanderjeurissen/ranger_devicons.git
