update Git global config for pull
update tmux/tmux-thumbs submodule

--- a/gitconfig/.gitconfig
+++ b/gitconfig/.gitconfig
@@ -11,6 +11,10 @@
 [log]
 	date = relative
 
+[pull]
+    rebase = false
+    ff = only
+
 [branch]
     autoSetupMerge=false
     autoSetupRebase=never
