--- a/redshift/.config/redshift/redshift.conf
+++ b/redshift/.config/redshift/redshift.conf
@@ -5,8 +5,8 @@ adjustment-method=randr
 location-provider=manual
 gamma-night=0.9
 gamma-day=1
-dawn-time=07:00
-dusk-time=20:00
+dawn-time=07:00-08:00
+dusk-time=18:00-18:40
 
 [manual]
 lat=-21.8272
