change redshift time, change mimeapps

--- a/redshift/.config/redshift/redshift.conf
+++ b/redshift/.config/redshift/redshift.conf
@@ -1,12 +1,13 @@
 [redshift]
 temp-day=6500
-temp-night=2200
+#temp-night=2200
+temp-night=3800
 adjustment-method=randr
 location-provider=manual
 gamma-night=0.9
 gamma-day=1
 dawn-time=07:00-08:00
-dusk-time=18:00-18:40
+dusk-time=19:00-19:40
 
 [manual]
 lat=-21.8272
