--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -13,6 +13,7 @@ $hostname\
 $cmd_duration$jobs$shlvl$sudo$character"""
 
 right_format = """
+$custom\
 $nodejs\
 $python\
 $terraform\
@@ -42,7 +43,11 @@ up_to_date = ' [ ](green)'
 
 [git_metrics]
 format = '([+$added]($added_style) )([-$deleted]($deleted_style) )'
-disabled = true
+disabled = false
+
+[git_state]
+format = '[\($state( $progress_current of $progress_total)\)]($style) '
+cherry_pick = '[🍒 PICKING](bold red)'
 
 [cmd_duration]
 min_time = 500
@@ -77,6 +82,7 @@ format = '[${symbol}${pyenv_prefix}(${version} )(\($virtualenv\) )]($style)'
 
 [golang]
 format = '[$symbol($version )]($style)'
+detect_files = ['go.mod']
 symbol = ' '
 
 [lua]
@@ -119,7 +125,15 @@ vimcmd_replace_one_symbol = '[](bold purple)'
 vimcmd_replace_symbol     = '[](bold purple)'
 vimcmd_visual_symbol      = '[](bold yellow)'
 
-
 # Disable the package module, hiding it from the prompt completely
 [package]
 disabled = true
+
+# more in
+# https://github.com/starship/starship/discussions/1252
+[custom.docker]
+description = "Shows the docker symbol if the current directory has Dockerfile or docker-compose.yml files"
+command = "echo 🐳"
+files = ["Dockerfile", "docker-compose.yml", "docker-compose.yaml"]
+when = """ command -v docker &> /dev/null; exit (echo $?); """
+
