add alias pipewire in top
fix fzf_select, update fzf_search commands in ranger

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -764,8 +764,9 @@ copytmap <ESC> q Q w <C-c>
 map <C-f> fzf_select
 
 map <alt>/ console fd_search -d5%space
-map <alt>. fd_next
-map <alt>, fd_prev
+map <alt>n fd_next
+map <alt>p fd_prev
+
 map cc console z%space
 map cz zi
 
