Add ripdrag on Ranger
add alias 'pipe-top'
fix zsh_highlights

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -793,5 +793,7 @@ map <alt>p fd_prev
 
 map cc console z%space
 map cz zi
+# map <C-d> shell ripdrag %p
+map <C-d> shell ripdrag %p -x 2>/dev/null &
 
 default_linemode devicons
