Starship: change kubernetes context alias
Tmux:
    change tmux-thumb to open with \ 'backslack' key
    add plugin tmux-easy-motion, open with space

Zsh: add plugin tmux-easy-motion

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -95,8 +95,8 @@ format = '[$symbol$workspace $version]($style) '
 format = '[󱃾 $context](dimmed green) '
 disabled = false
 [kubernetes.context_aliases]
-'.*744894293558*.*' = 'kube:prod'
-'.*437642595153*.*' = 'kube:qa'
+'.*744894293558.*/(?P<name>[a-z-_]+)$' = 'PRD $name'
+'.*437642595153.*/(?P<name>[a-z-_]+)$' = 'QA $name'
 
 [rust]
 format = '[$symbol($version )]($style)'
