--- a/gitconfig/.gitconfig
+++ b/gitconfig/.gitconfig
@@ -81,3 +81,6 @@
 #	pretty = format:%C(auto,yellow)%h%C(auto,magenta)% G? %C(auto,blue)%>(12,trunc)%ad %C(auto,green)%<(16,trunc)%aN%C(auto,reset)%s%C(auto,red)% gD% D
 [init]
 	defaultBranch = master
+
+[IncludeIf "gitdir:/home/rods/develop/q4inc/**/.git"]
+    path = ~/.gitconfig.q4
