--- a/homeroot/.gitconfig
+++ b/homeroot/.gitconfig
@@ -84,3 +84,6 @@
 
 [IncludeIf "gitdir:/home/rods/develop/q4inc/**/.git"]
     path = ~/.gitconfig.q4
+
+[alias]
+	tag-date = log --tags --simplify-by-decoration --pretty=\"format:%ci %d\"
