add user-gitconfig for macos, remove includeIf for q4

--- a/homeroot/.gitconfig
+++ b/homeroot/.gitconfig
@@ -1,5 +1,7 @@
 [include]
     path = /disks/Vault/Secret_Files/user-gitconfig
+    path = /Volumes/VeraCrypt/Secret_Files/user-gitconfig
+
 
 [core]
 	editor = nvim
@@ -81,9 +83,6 @@
 #	pretty = format:%C(auto,yellow)%h%C(auto,magenta)% G? %C(auto,blue)%>(12,trunc)%ad %C(auto,green)%<(16,trunc)%aN%C(auto,reset)%s%C(auto,red)% gD% D
 [init]
 	defaultBranch = master
-
-[IncludeIf "gitdir:/home/rods/develop/q4inc/**/.git"]
-    path = ~/.gitconfig.q4
 
 [alias]
 	tag-date = log --tags --simplify-by-decoration --pretty=\"format:%ci %d\"
