yazi: add new theme 'catppuccin'

--- a/yazi/.config/yazi/theme.toml
+++ b/yazi/.config/yazi/theme.toml
@@ -8,6 +8,9 @@
 
 [flavor]
 use = "kanagawa"
+#use = "catppuccin-mocha"
+# For upcoming Yazi 0.4 (nightly version):
+#dark = "catppuccin-mocha"
 
 [manager]
 border_style = { fg = "#282C34"}
