--- a/yazi/.config/yazi/flavors/kanagawa.yazi/flavor.toml
+++ b/yazi/.config/yazi/flavors/kanagawa.yazi/flavor.toml
@@ -1,16 +1,19 @@
 ## Color palette
 ## Check https://github.com/rebelot/kanagawa.nvim for more details
-# sumiInk0      "#16161d"
+# sumiInk0      "#16161d" dark bg
 # sumiInk3      "#1f1f28" bg
 # sumiInk4      "#2a2a37"
 # sumiInk6      "#54546d"
 # fujiWhite     "#dcd7ba" fg
+# oldWhite      "#c8c093" dark fg
 # fujiGray      "#727169"
 # peachRed      "#ff5d62"
+# autumnRed     "#c34043"
 # crystalBlue   "#7e9cd8"
 # waveRed       "#e46876"
 # carpYellow    "#e6c384"
 # springGreen   "#98bb6c"
+# autumnGreen   "#76946a"
 # oniViolet     "#957fb8"
 # waveAqua1     "#6a9589"
 # surimiOrange  "#ffa066"
@@ -51,9 +54,9 @@ unset_alt = { fg = "#e6c384", bg = "#2a2a37" }
 
 
 [status]
-separator_open = ""
-separator_close = ""
-separator_style = { fg = "reset", bg = "#2a2a37" }
+sep_left = { open = "", close = "" }
+sep_right = { open = "", close = "" }
+overall = { fg = "#c8c093", bg = "#16161d" }
 
 progress_label = { fg = "#7e9cd8", bg = "#2a2a37", bold = true }
 progress_normal = { fg = "#2a2a37", bg = "#1f1f28" }
@@ -108,15 +111,27 @@ title_info = { fg = "#98bb6c" }
 title_warn = { fg = "#e6c384" }
 title_error = { fg = "#ff5d62" }
 
-# files
 [filetype]
 rules = [
+    # images
     { mime = "image/*", fg = "#e6c384" },
+
+    # media
     { mime = "{audio,video}/*", fg = "#957fb8" },
-    { mime = "application/{,g}zip", fg = "#e46876" },
-    { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", fg = "#e46876" },
+
+    # archives
+    { mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", fg = "#e46876" },
+
+    # documents
     { mime = "application/{pdf,doc,rtf,vnd.*}", fg = "#6a9589" },
-    { name = "*", is = "orphan", fg = "#e46876" },
-    { name = "*", is = "exec", fg = "#957fb8" },
+
+    # broken links
+    { name = "*", is = "orphan", fg = "#c34043" },
+
+    # executables
+    { name = "*", is = "exec", fg = "#76946a" },
+
+    # fallback
+    { name = "*", fg = "#dcd7ba" },
     { name = "*/", fg = "#7e9cd8" },
 ]
