--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -23,15 +23,15 @@ prepend_keymap = [
 	{ on = "l", run = "plugin smart-enter", desc = "Enter the child directory, or open the file" },
 
 	# { on = "n", run = "plugin relative-motions", desc = "Trigger a new relative motion" },
-	{ on = "1", run = "plugin relative-motions --args=1", desc = "Move in relative steps" },
-	{ on = "2", run = "plugin relative-motions --args=2", desc = "Move in relative steps" },
-	{ on = "3", run = "plugin relative-motions --args=3", desc = "Move in relative steps" },
-	{ on = "4", run = "plugin relative-motions --args=4", desc = "Move in relative steps" },
-	{ on = "5", run = "plugin relative-motions --args=5", desc = "Move in relative steps" },
-	{ on = "6", run = "plugin relative-motions --args=6", desc = "Move in relative steps" },
-	{ on = "7", run = "plugin relative-motions --args=7", desc = "Move in relative steps" },
-	{ on = "8", run = "plugin relative-motions --args=8", desc = "Move in relative steps" },
-	{ on = "9", run = "plugin relative-motions --args=9", desc = "Move in relative steps" },
+	{ on = "1", run = "plugin relative-motions 1", desc = "Move in relative steps" },
+	{ on = "2", run = "plugin relative-motions 2", desc = "Move in relative steps" },
+	{ on = "3", run = "plugin relative-motions 3", desc = "Move in relative steps" },
+	{ on = "4", run = "plugin relative-motions 4", desc = "Move in relative steps" },
+	{ on = "5", run = "plugin relative-motions 5", desc = "Move in relative steps" },
+	{ on = "6", run = "plugin relative-motions 6", desc = "Move in relative steps" },
+	{ on = "7", run = "plugin relative-motions 7", desc = "Move in relative steps" },
+	{ on = "8", run = "plugin relative-motions 8", desc = "Move in relative steps" },
+	{ on = "9", run = "plugin relative-motions 9", desc = "Move in relative steps" },
 
 	{ on = [ "m", "b" ], run = "plugin bookmarks --args=save", desc = "Save current position as a bookmark" },
 	{ on = "'", run = "plugin bookmarks --args=jump", desc = "Jump to a bookmark" },
