--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -18,8 +18,8 @@ prepend_keymap = [
 	{ on = [ "\\", "T" ], run = "plugin max-preview", desc = "Maximize or restore preview" },
 
 	{ on = "F", run = "plugin smart-filter", desc = "Smart filter" },
-	{ on = "K", run = "plugin parent-arrow --args=-1" },
-	{ on = "J", run = "plugin parent-arrow --args=1" },
+	{ on = "K", run = "plugin parent-arrow -1" },
+	{ on = "J", run = "plugin parent-arrow 1" },
 	{ on = "l", run = "plugin smart-enter", desc = "Enter the child directory, or open the file" },
 
 	# { on = "n", run = "plugin relative-motions", desc = "Trigger a new relative motion" },
@@ -33,15 +33,15 @@ prepend_keymap = [
 	{ on = "8", run = "plugin relative-motions 8", desc = "Move in relative steps" },
 	{ on = "9", run = "plugin relative-motions 9", desc = "Move in relative steps" },
 
-	{ on = [ "m", "b" ], run = "plugin bookmarks --args=save", desc = "Save current position as a bookmark" },
-	{ on = "'", run = "plugin bookmarks --args=jump", desc = "Jump to a bookmark" },
-	{ on = [ "b", "d" ], run = "plugin bookmarks --args=delete", desc = "Delete a bookmark" },
-	{ on = [ "b", "D" ], run = "plugin bookmarks --args=delete_all", desc = "Delete all bookmarks" },
+	{ on = [ "m", "b" ], run = "plugin bookmarks save", desc = "Save current position as a bookmark" },
+	{ on = "'", run = "plugin bookmarks jump", desc = "Jump to a bookmark" },
+	{ on = [ "b", "d" ], run = "plugin bookmarks delete", desc = "Delete a bookmark" },
+	{ on = [ "b", "D" ], run = "plugin bookmarks delete_all", desc = "Delete all bookmarks" },
 ]
 
 append_keymap = [
 	# Goto
 	{ on = [ "g", "d" ],       run = "cd ~/Downloads/", desc = "Go to ~/Downloads" },
-	{ on = [ "g", "f" ],       run = "cd /disks/Vault/Financeiro/", desc = "Go to Financeiro directory" },
+	{ on = [ "g", "$" ],       run = "cd /disks/Vault/Financeiro/", desc = "Go to Financeiro directory" },
 	{ on = [ "g", "t" ],       run = "cd /tmp/", desc = "Go to /tmp" },
 ]
