yazi: update plugins, manual theme fix for new tab
update keymaps

--- a/yazi/.config/yazi/package.toml
+++ b/yazi/.config/yazi/package.toml
@@ -1,17 +1,7 @@
 [[plugin.deps]]
-use = "yazi-rs/plugins:hide-preview"
-rev = "a1738e8"
-hash = "53f826884e2c7e521cecc492a7f31d7e"
-
-[[plugin.deps]]
 use = "dedukun/relative-motions"
 rev = "61ae795"
 hash = "65d576a76597aac2a428dc7ec0eda2ce"
-
-[[plugin.deps]]
-use = "yazi-rs/plugins:max-preview"
-rev = "a1738e8"
-hash = "a8025f2bb311e869069364fba01abffc"
 
 [[plugin.deps]]
 use = "yazi-rs/plugins:smart-filter"
@@ -22,6 +12,21 @@ hash = "f0c4b41b5d19a3144958383333eff6e7"
 use = "dedukun/bookmarks"
 rev = "95b2c58"
 hash = "17a094653b7d0db4ac68ed531d2e1412"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:toggle-pane"
+rev = "63f9650"
+hash = "d5d4f3527592da5fbe77fd6f51815f80"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:smart-enter"
+rev = "63f9650"
+hash = "a7ab702e1ef0c097defbc976ed34c186"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:chmod"
+rev = "63f9650"
+hash = "d0ad0c1946b46a30c8489735fe8de41c"
 
 [[flavor.deps]]
 use = "dangooddd/kanagawa"
