--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -2,7 +2,7 @@
 # If you encounter any issues, please make an issue at https://github.com/yazi-rs/schemas.
 "$schema" = "https://yazi-rs.github.io/schemas/keymap.json"
 
-[manager]
+[mgr]
 
 # to override
 prepend_keymap = [
@@ -14,8 +14,9 @@ prepend_keymap = [
 	{ on = [ "\\", "d" ], run = ''' shell 'ripdrag --and-exit --no-click "$@" 2>/dev/null &' --confirm ''', desc = "Drap on Drop exit 1th" },
 	{ on = [ "\\", "D" ], run = ''' shell 'ripdrag --no-click "$@" 2>/dev/null &' --confirm ''', desc = "Drap on Drop no-exit" },
 	{ on = [ "\\", "s" ], run = 'shell "$SHELL" --block --confirm', desc = "Open shell here" },
-	{ on = [ "\\", "t" ], run = "plugin hide-preview", desc = "Toggle preview pane" },
-	{ on = [ "\\", "T" ], run = "plugin max-preview", desc = "Maximize or restore preview" },
+	{ on = [ "\\", "t" ], run = "plugin toggle-pane min-preview", desc = "Show or hide the preview pane" },
+	{ on = [ "\\", "T" ], run = "plugin toggle-pane max-preview", desc = "Maximize or restore the preview pane" },
+	{ on = [ "\\", "m" ], run = "plugin chmod", desc = "Chmod on selected files" },
 
 	{ on = "F", run = "plugin smart-filter", desc = "Smart filter" },
 	{ on = "K", run = "plugin parent-arrow -1" },
