--- a/yazi/.config/yazi/theme.toml
+++ b/yazi/.config/yazi/theme.toml
@@ -7,5 +7,9 @@
 [flavor]
 dark = "kanagawa"
 
-[manager]
+[mgr]
 border_style = { fg = "#434a57"}
+
+[tabs]
+active   = { fg = "#24273a", bg = "#8aadf4", bold = true }
+inactive = { fg = "#8aadf4", bg = "#363a4f" }
