--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -6,6 +6,9 @@
 
 # to override
 prepend_keymap = [
+	# https://github.com/sxyazi/yazi/issues/2684#issuecomment-2833555421
+	{ on = "k", run = "arrow -1" }, # override default behavior (prev / next)
+	{ on = "j", run = "arrow 1" }, # override default behavior (prev / next)
 	# Seeking
 	{ on = "<A-k>", run = "seek -5", desc = "Seek up 5 units in the preview" },
 	{ on = "<A-j>", run = "seek 5",  desc = "Seek down 5 units in the preview" },
