--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ _patch*
 mpv/.config/mpv/watch_later/
 ranger/.config/ranger/plugins/__init__.py
 __pycache__
+sway/.config/sway/current-wallpaper
+wezterm/.config/wezterm/opacity.txt
