sway: add mod+shift+m to force screen to turn on.
waybar: change style, improve justfile (debug command)
zshrc add new exports

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -183,6 +183,7 @@ output * bg /home/rods/Pictures/wallpapers-3440x1440/bonfire-dark-black-backgrou
 
     # from alias `fix-swhkd`
     bindsym $mod+Shift+r exec "pkill swhkd; sleep 1; swhkd & disown; killall -9 dunst; dunstify 'reloaded swhkd'"
+    bindsym $mod+Shift+m exec 'swaymsg "output * dpms off" && sleep 2 && swaymsg "output * dpms on"'
 #
 # Moving around:
 #
