--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -2,7 +2,7 @@
 // env GTK_DEBUG=interactive waybar # debug
 [
     {
-        "output": ["DP-1", "eDP-1"],
+        "output": ["DP-1"],
         "height": 30,
         "spacing": 4,
         "modules-left": [
@@ -19,6 +19,7 @@
             "idle_inhibitor",
             // "custom/pacman",
             "custom/dollar",
+            "custom/mouse_battery",
             "custom/keyboard_battery",
             "pulseaudio",
             "network",
@@ -194,6 +195,133 @@
             "on-click": "$HOME/.scripts/keyboard-battery.sh --toggle; pkill -SIGRTMIN+19 waybar",
             "on-click-right": "$HOME/.scripts/keyboard-battery.sh; pkill -SIGRTMIN+19 waybar",
             "signal": 19
+        },
+        "custom/mouse_battery": {
+            "interval": 30,
+            "exec": "$HOME/.scripts/mouse-battery.sh",
+            "on-click": "$HOME/.scripts/mouse-battery.sh; pkill -SIGRTMIN+20 waybar",
+            "signal": 20
+        }
+    },
+    // ====================================================================================================
+    // NOTEBOOK SCREEN
+    {
+        "output": ["eDP-1"],
+        "height": 30,
+        "spacing": 4,
+        "modules-left": [
+            "sway/workspaces",
+            "sway/mode",
+        ],
+        "modules-center": [
+            "sway/window"
+        ],
+        "modules-right": [
+            "idle_inhibitor",
+            "pulseaudio",
+            "network",
+            "temperature",
+            "clock",
+            "tray",
+            "custom/notification",
+            "custom/power"
+        ],
+        "sway/window": {
+            "format": "{}",
+            "max-length": 50,
+            "rewrite": {
+                "(.*) — Mozilla Firefox": " $1",
+                "(.*) - Google Chrome": " $1",
+                "(.*) - zsh": "> [$1]",
+                "(.*) - NVIM": " $1"
+            }
+        },
+        "sway/mode": {
+            "format": "󰩨  {}",
+            "max-length": 50
+        },
+        "idle_inhibitor": {
+            "format": "{icon}",
+            "format-icons": {
+                "activated": " ",
+                "deactivated": " "
+            }
+        },
+        "tray": {
+            "icon-size": 18,
+            "show-passive-items": true,
+            "spacing": 10
+        },
+        "clock": {
+            "timezone": "America/Sao_Paulo",
+            "format": "{:%a %d %b %H:%M}",
+            "tooltip-format": "<tt><small>{calendar}</small></tt>",
+            "calendar": {
+                "mode"          : "year",
+                "mode-mon-col"  : 3,
+                "weeks-pos"     : "right",
+                "on-scroll"     : 1,
+                "on-click-right": "mode",
+                "format": {
+                    "months":     "<span color='#ffead3'><b>{}</b></span>",
+                    "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+                    "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+                    "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+                    "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+                }
+            },
+            "format-alt": "{:%A %d %B, %Y %H:%M (%Z)}",
+            "on-click-right": "kdialog --calendar Calendar --title \"RodsWay Calendar\""
+        },
+        "temperature": {
+            "critical-threshold": 80,
+            "format": "{temperatureC}°C {icon}",
+            "format-critical": " {temperatureC}°C {icon}",
+            "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "█"]
+        },
+        "network": {
+            "format-wifi": "  {signalStrength}%",
+            "tooltip-format": "  {essid} / {ifname} 󰊙  {gwaddr}",
+            "format-alt": "{ifname}: {ipaddr}/{cidr}",
+            "format-ethernet": "{ipaddr}/{cidr}",
+            "format-linked": "{ifname} (No IP)",
+            "format-disconnected": "Disconnected ⚠"
+        },
+        "pulseaudio": {
+            "format": "{volume}% {icon} {format_source}",
+            "format-bluetooth": "{volume}% {icon} {format_source}",
+            "format-bluetooth-muted": "󰝟 {icon} {format_source}",
+            "format-muted": "󰝟 {format_source}",
+            "format-source": "{volume}% ",
+            "format-source-muted": "",
+            "format-icons": {
+                "headphone": " ",
+                "hands-free": "󱥋 ",
+                "headset": "󰋎 ",
+                "phone": " ",
+                "portable": " ",
+                "car": " ",
+                "default": ["", " ", " "]
+            },
+            "on-click": "pavucontrol",
+            "on-click-right": "2>&1 wezterm start --class=infloatmode pulsemixer > /dev/null"
+        },
+        "custom/netusage": {
+            "exec": "$HOME/github/sway-netusage/waybar-netusage -down -interface wlo1",
+            "return-type": "json"
+        },
+        "custom/notification": {
+            "interval": 60,
+            "exec": "$HOME/.scripts/notification.sh",
+            "on-click-right": "$HOME/.scripts/notification-toggle.sh --toggle",
+            "format": "{icon}",
+            "format-icons": {
+                "on": "<span size=\"12pt\"> </span>",
+                "off": "<span size=\"12pt\" foreground=\"#00000040\"> </span>"
+            },
+            "return-type": "json",
+            "tooltip": false,
+            "signal": 18
         }
     },
     // ====================================================================================================
