make GnuPG (gpg) functional in MacOS and Linux with no hurdle

--- a/gpg/.gnupg/gpg-agent.conf
+++ b/gpg/.gnupg/gpg-agent.conf
@@ -3,7 +3,8 @@ max-cache-ttl 18000
 
 # https://unix.stackexchange.com/questions/724759/how-do-i-get-git-to-use-the-cli-rather-than-some-gui-application-when-asking-for
 # pinentry-program /usr/bin/pinentry-curses
-pinentry-program /usr/bin/pinentry-tty
+# pinentry-program /usr/bin/pinentry-tty
+pinentry-program ~/.gnupg/pinentry-wrapper.sh
 #
 #--------------------
 # gpgconf --kill gpg-agent
