--- a/homeroot/.gitconfig
+++ b/homeroot/.gitconfig
@@ -89,6 +89,7 @@
 [alias]
 	tag-date = log --tags --simplify-by-decoration --pretty=\"format:%ci %d\"
 	shorthash = rev-parse --short HEAD
+    latest = !git branch --sort=authordate -vv | rg -v 'gone\\]'
 
 # macos path apple
 [IncludeIf "gitdir:/Users/rods/dev/ns/**/.git"]
