--- a/apps.desktop/.local/share/applications/google-chrome.desktop
+++ b/apps.desktop/.local/share/applications/google-chrome.desktop
@@ -107,7 +107,8 @@ Comment[zh_HK]=連線到網際網路
 Comment[zh_TW]=連線到網際網路
 StartupWMClass=Google-chrome
 # Exec=/usr/bin/google-chrome-stable %U
-Exec=/usr/bin/google-chrome-stable --enable-gpu --enable-hardware-acceleration --ozone-platform=wayland %U
+# Exec=/usr/bin/google-chrome-stable --enable-gpu --enable-hardware-acceleration --ozone-platform=wayland %U
+Exec=dbus-launch google-chrome-stable --enable-gpu --enable-hardware-acceleration --ozone-platform=wayland  %U
 StartupNotify=true
 Terminal=false
 Icon=google-chrome
@@ -170,7 +171,8 @@ Name[zh_CN]=新建窗口
 Name[zh_TW]=開新視窗
 StartupWMClass=Google-chrome
 # Exec=/usr/bin/google-chrome-stable
-Exec=/usr/bin/google-chrome-stable --enable-gpu --enable-hardware-acceleration --ozone-platform=wayland
+# Exec=/usr/bin/google-chrome-stable --enable-gpu --enable-hardware-acceleration --ozone-platform=wayland
+Exec=dbus-launch google-chrome-stable --enable-gpu --enable-hardware-acceleration --ozone-platform=wayland
 
 [Desktop Action new-private-window]
 Name=New Incognito Window
@@ -224,4 +226,5 @@ Name[zh_CN]=新建隐身窗口
 Name[zh_TW]=新增無痕式視窗
 StartupWMClass=Google-chrome
 # Exec=/usr/bin/google-chrome-stable --incognito
-Exec=/usr/bin/google-chrome-stable --incognito --enable-gpu --enable-hardware-acceleration --ozone-platform=wayland
+# Exec=/usr/bin/google-chrome-stable --enable-gpu --enable-hardware-acceleration --ozone-platform=wayland --incognito 
+Exec=dbus-launch google-chrome-stable --enable-gpu --enable-hardware-acceleration --ozone-platform=wayland --incognito 
