--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -37,9 +37,16 @@
   </alias>
 
   <alias>
-    <family>terminal-font</family>
+    <family>terminal-font-jetbrains</family>
     <prefer>
       <family>JetBrains Mono</family>
+      <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>terminal-font-firacode</family>
+    <prefer>
+      <family>FiraCode Nerd Font Mono</family>
       <family>Noto Color Emoji</family>
     </prefer>
   </alias>
