--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -4,6 +4,9 @@ max-visible=5
 margin=0,0,5,0
 outer-margin=40,10,0,0
 
+# this will send notification to the monitor being used (mouse focus)
+output=
+
 on-button-left=invoke-default-action
 on-button-middle=dismiss-group
 on-button-right=dismiss
